--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "autoprefixer": "^9.8.5",
+    "cssnano": "^4.1.10",
+    "postcss-custom-properties": "^9.1.1",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.3",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "tailwindcss": "^1.5.2"
   },
   "scripts": {
+    "build:tailwind": "tailwindcss build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
+    "prestart": "npm run build:tailwind",
     "start": "react-scripts start",
+    "prebuild": "NODE_ENV=production npm run build:tailwind",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -37,7 +48,6 @@
     "eslint-plugin-jsx-a11y": "^6.3.0",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "4.0.0",
-    "prettier": "2.0.5",
-    "prettier-eslint": "^11.0.0"
+    "prettier": "2.0.5"
   }
 }
