--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "autoprefixer": "^9.8.5",
+    "axios": "^0.19.2",
     "cssnano": "^4.1.10",
     "postcss-custom-properties": "^9.1.1",
     "postcss-flexbugs-fixes": "^4.2.1",
